# BT-Flock

./: .assess.py.swp  .gitignore  COMPARISON_ANALYSIS.md  COMPARISON_VERIFICATION.md  README.md  ass_res.txt  assess_dataset.py  dataset_assessment_report_comparison.json  loss_res.txt  make_candiates.py  pyproject.toml  pytest.ini
.github/workflows/: unit-test.yml
backtest/: IMPROVEMENT_PLAN.md  NEXT_PLAN.md  automated_dataset_generation.py  calculate_data_weight.py  calculate_row_weights.py  calculate_weights.py  compute_loss.py  download_miners_data.py  miner_data_weights.json  miners_metadata.json  qwen_loss_predictor.py  score_data.py  select_max_weight_data.py  train_cpu_small_model.py  validate_data.py
backtest/generated_data/: data_20251211_232418_395854.jsonl
data/candidates/: dataset_000.jsonl  dataset_001.jsonl  dataset_003.jsonl  dataset_004.jsonl  dataset_005.jsonl  dataset_006.jsonl  dataset_007.jsonl  dataset_008.jsonl  dataset_009.jsonl  dataset_010.jsonl  dataset_011.jsonl  dataset_012.jsonl  dataset_014.jsonl  dataset_015.jsonl  dataset_017.jsonl  dataset_018.jsonl  dataset_019.jsonl  dataset_020.jsonl  dataset_021.jsonl  dataset_022.jsonl  dataset_023.jsonl  dataset_024.jsonl  dataset_025.jsonl  dataset_026.jsonl  dataset_027.jsonl  dataset_028.jsonl  dataset_029.jsonl  dataset_030.jsonl  dataset_031.jsonl  dataset_032.jsonl  dataset_033.jsonl  dataset_034.jsonl  dataset_035.jsonl  dataset_036.jsonl  dataset_037.jsonl  dataset_038.jsonl  dataset_039.jsonl  dataset_040.jsonl  dataset_041.jsonl  dataset_042.jsonl  (+57 more)
data/candidates0/: dataset_000.jsonl  dataset_001.jsonl  dataset_003.jsonl
flockoff/: __init__.py  constants.py
flockoff/miners/: chain.py  data.py  model.py
flockoff/utils/: chain.py  git.py
flockoff/validator/: chain.py  config.ini  constants.py  database.py  dataset.py  qwen_evaluator.py  trainer.py  training_args.yaml  validator_utils.py
neurons/: compute_loss.py  miner.py  validator.py
output/: adapter_config.json
tests/FlockDataset/utils/: test_utils.py
tests/FlockDataset/validators/: test_database.py  test_scoring.py
