[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "FLock-subnet"
version = "0.2.0"
description = "FLock Subnet"
authors = [{name = "Flock Devs"}]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "accelerate==1.6.0 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "aiohappyeyeballs==2.6.1 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "aiohttp==3.11.18 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "aiosignal==1.3.2 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "annotated-types==0.7.0 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "anyio==4.9.0 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "async-substrate-interface==1.5.1 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "async-timeout==5.0.1 ; python_full_version == '3.10.*'",
    "asyncstdlib==3.13.1 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "attrs==25.3.0 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "base58==2.1.1 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "bitsandbytes>=0.45.5 ; platform_machine != 'arm64' or sys_platform != 'darwin'",
    "bittensor==9.10.0 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "bittensor-commit-reveal==0.4.0 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "bittensor-wallet==4.0.0 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "bt-decode==0.6.0 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "certifi==2025.4.26 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "cffi==1.17.1 ; python_full_version >= '3.10' and python_full_version < '3.13' and platform_python_implementation != 'PyPy'",
    "charset-normalizer==3.4.2 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "click==8.1.8 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "colorama==0.4.6 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "cryptography==43.0.3 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "datasets==3.6.0 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "decorator==5.2.1 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "dill==0.3.8 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "exceptiongroup==1.2.2 ; python_full_version == '3.10.*'",
    "expecttest==0.3.0 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "fastapi==0.110.3 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "filelock==3.18.0 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "frozenlist==1.6.0 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "fsspec[http]==2025.3.0 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "h11==0.16.0 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "huggingface-hub==0.29.3 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "hypothesis==6.131.15 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "idna==3.10 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "iniconfig==2.1.0 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "jinja2==3.1.6 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "markdown-it-py==3.0.0 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "markupsafe==3.0.2 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "mdurl==0.1.2 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "more-itertools==10.7.0 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "mpmath==1.3.0 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "msgpack==1.1.0 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "msgpack-numpy-opentensor==0.5.0 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "multidict==6.4.3 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "multiprocess==0.70.16 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "munch==2.5.0 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "nest-asyncio==1.6.0 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "netaddr==1.3.0 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "networkx==3.4.2 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "numpy==2.0.2 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "nvidia-cublas-cu12==12.6.4.1 ; python_full_version >= '3.10' and python_full_version < '3.13' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cuda-cupti-cu12==12.6.80 ; python_full_version >= '3.10' and python_full_version < '3.13' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cuda-nvrtc-cu12==12.6.77 ; python_full_version >= '3.10' and python_full_version < '3.13' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cuda-runtime-cu12==12.6.77 ; python_full_version >= '3.10' and python_full_version < '3.13' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cudnn-cu12==9.5.1.17 ; python_full_version >= '3.10' and python_full_version < '3.13' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cufft-cu12==11.3.0.4 ; python_full_version >= '3.10' and python_full_version < '3.13' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cufile-cu12==1.11.1.6 ; python_full_version >= '3.10' and python_full_version < '3.13' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-curand-cu12==10.3.7.77 ; python_full_version >= '3.10' and python_full_version < '3.13' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cusolver-cu12==11.7.1.2 ; python_full_version >= '3.10' and python_full_version < '3.13' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cusparse-cu12==12.5.4.2 ; python_full_version >= '3.10' and python_full_version < '3.13' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-cusparselt-cu12==0.6.3 ; python_full_version >= '3.10' and python_full_version < '3.13' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-nccl-cu12==2.26.2 ; python_full_version >= '3.10' and python_full_version < '3.13' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-nvjitlink-cu12==12.6.85 ; python_full_version >= '3.10' and python_full_version < '3.13' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "nvidia-nvtx-cu12==12.6.77 ; python_full_version >= '3.10' and python_full_version < '3.13' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "packaging==25.0 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "pandas==2.2.3 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "password-strength==0.0.3.post2 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "peft==0.15.2 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "pluggy==1.5.0 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "propcache==0.3.1 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "psutil==7.0.0 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "py==1.11.0 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "py-bip39-bindings==0.1.11 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "pyarrow==20.0.0 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "pycparser==2.22 ; python_full_version >= '3.10' and python_full_version < '3.13' and platform_python_implementation != 'PyPy'",
    "pycryptodome==3.22.0 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "pydantic==2.11.4 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "pydantic-core==2.33.2 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "pygments==2.19.1 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "pytest==8.3.5 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "python-dateutil==2.9.0.post0 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "python-dotenv==1.1.0 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "python-statemachine==2.5.0 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "pytz==2025.2 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "pyyaml==6.0.2 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "regex==2024.11.6 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "requests==2.32.3 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "retry==0.9.2 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "rich==14.0.0 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "safetensors==0.5.3 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "scalecodec==1.2.11 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "scipy==1.15.3 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "setuptools==70.0.0 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "six==1.17.0 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "sniffio==1.3.1 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "sortedcontainers==2.4.0 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "starlette==0.37.2 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "sympy==1.14.0 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "tokenizers==0.21.1 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "toml==0.10.0 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "tomli==2.2.1 ; python_full_version == '3.10.*'",
    "torch==2.7.0 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "tqdm==4.67.1 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "transformers==4.50.3 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "triton==3.3.0 ; python_full_version >= '3.10' and python_full_version < '3.13' and platform_machine == 'x86_64' and sys_platform == 'linux'",
    "trl==0.16.1 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "typing-extensions==4.13.2 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "typing-inspection==0.4.0 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "tzdata==2025.2 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "urllib3==2.4.0 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "uvicorn==0.34.2 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "websockets==15.0.1 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "wheel==0.45.1 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "xxhash==3.5.0 ; python_full_version >= '3.10' and python_full_version < '3.13'",
    "yarl==1.20.0 ; python_full_version >= '3.10' and python_full_version < '3.13'",
]

[tool.hatch.build.targets.wheel]
packages = ["flockoff", "neurons"]
